# DiGO

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
digo/: CMakeLists.txt
digo/common/: error.hpp  types.h
digo/engine/: CMakeLists.txt  CmakeLists.txt  DistGOClient.hpp  DistGOServer.cc  DistGOServer.hpp  DistGeneticOptimizer.hpp  GOImpl.hpp  GeneticOptimizerService.hpp
digo/engine/proto/: CMakeLists.txt  service.proto
digo/ops_lib/: CMakeLists.txt  DistStrategy.hpp  Selection.hpp
digo/ops_lib/permutation/: Crossing.hpp  Mutation.hpp
digo/tests/engine/: CMakeLists.txt  CmakeLists.txt
examples/simple/: CMakeLists.txt  client.cc  common.hpp  server.cc
